# fedavg_mpi

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bridge.pyx  library.py  library.pyx  main.c  meson.build  nn.py  server.py
docs/: generate_plots.py  references.bib  report.latex
docs/fig/: input_pipeline.drawio  modes.drawio
